# Medi--v2.0

./: .gitignore
.emergent/: emergent.yml
backend/: .env  ai_service.py  auth_utils.py  pyproject.toml  schemas.py  server.py
backend/meditrack_backend/: __main__.py  drug_interactions.json
backend/tests/: test_meditrack_e2e.py  test_wheel_packaging.py
frontend/: .env  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css  meditrack-app.jsx
frontend/src/components/: HealthChat.jsx
frontend/src/lib/: api.js  offline.js
memory/: PRD.md
test_reports/: iteration_1.json  iteration_2.json  iteration_3.json
test_reports/pytest/: pytest_results.xml
